--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "serialize-javascript": "^2.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "grunt-angular-templates": "^1.2.0"
   }
 }
