--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-weather-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://cass0115.github.io/",
+  "homepage": "http://cass0115.github.io/react-weather-app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
